--- a/12_exercises.ipynb
+++ b/12_exercises.ipynb
@@ -74,16 +74,35 @@
     "2. Inspect the value of `math.pi` and try out the function `math.sqrt()`.\n",
     "3. Calculate the following (using `math.pi` and `math.sqrt()` where relevant).  \n",
     "\n",
-    "    - $\\frac{4.6 + 1.2}{2.09}$ \n",
-    "    - $3\\times4^\\frac{7}{12}$\n",
-    "    - $r = 6$ <br />\n",
-    "      $\\frac{2}{3}\\times \\pi r^3$  \n",
-    "    - $5 \\times (\\frac{4 + 2}{\\sqrt{7} \\times 9})$\n"
+    "- $\\frac{4.6 + 1.2}{2.09}$  \n",
+    "- $3\\times4^\\frac{7}{12}$  \n",
+    "- $r = 6$ <br />\n",
+    "     $\\frac{2}{3}\\times \\pi r^3$    \n",
+    "- $5 \\times (\\frac{4 + 2}{\\sqrt{7} \\times 9})$\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Fixing errors"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**A**  \n",
+    "The code below does not work. Can you fix it?\n",
+    "\n",
+    "```python\n",
+    "print('I woke up at eight 'o clock this morning')\n",
+    "```"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,8 +113,30 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Operator precedence (1)\n",
+    "**B**  \n",
+    "The code below does not work. Can you fix it? Try to Google the error if you get stuck.\n",
     "\n",
+    "```python\n",
+    "name = \"John\"\n",
+    "age = 42\n",
+    "print('My name is' + name + 'and my age is ' + age)\n",
+    "```\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Your code"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**C**  \n",
     "In the code cell below, it was attempted to calculate the surface area of a circle. However, because of [operator precedence](https://www.tutorialspoint.com/python/operators_precedence_example.htm) the outcome is wrong! It should be 12.57. Can you correct this by using parentheses in the calculation? While you are at it, also add some spaces to make the code more readable."
    ]
   },
@@ -141,9 +182,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Operator precedence (2)\n",
-    "\n",
-    "Correct the calculations below by making use of grouping parentheses.\n",
+    "**D**  \n",
+    "Correct the calculations below by making use of grouping parentheses. It is all about Operator precedence.\n",
     "\n",
     "```\n",
     "10 - 7 // 2 * 3 + 1 = -2\n",
@@ -178,6 +218,168 @@
     "(5 + 3) * 2 ** 2\n",
     "```\n",
     "</details>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Working with variables"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Given the code chunks below, and the expected value(s) as defined by the `assert y == some_value` statement, give the variable(s) in the chunk a correct initial value.\n",
+    "The `assert y == some_value` statement checks the expression `y == some_value` and gives an error if it is not `true`.  \n",
+    "If your solution is correct, the chunk will not raise and `AssertionError` \n",
+    "\n",
+    "**A**  \n",
+    "```python\n",
+    "x = 0 # correct value of x is?\n",
+    "y = x + 2\n",
+    "assert y == 3\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Correct code here\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**B**  \n",
+    "\n",
+    "```python\n",
+    "x = 0 # correct value of x is?\n",
+    "y = x * 2 + 5\n",
+    "assert y == 9\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Correct code here\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**C**  \n",
+    "```python\n",
+    "x = 0 # correct value of x is?\n",
+    "y = 0 # correct value of y is?\n",
+    "z = x**y + 4\n",
+    "assert z == 20\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Correct code here\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**D**  \n",
+    "```python\n",
+    "x = 0 # correct value of x is?\n",
+    "y = 0 # correct value of y is?\n",
+    "z = (x + y) / (y - x)\n",
+    "assert z == 4\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Correct code here\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Types and Operators"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Given these variables:\n",
+    "\n",
+    "x = 4\n",
+    "y = 5\n",
+    "z = 'hallo'\n",
+    "\n",
+    "generate the requested outputs.\n",
+    "\n",
+    "a) `'hallohallohallohallo'`\n",
+    "<details>\n",
+    "  <summary style = \"color:OrangeRed;cursor:pointer;\">&#10149; Give me the solution</summary>\n",
+    "  \n",
+    "```python\n",
+    "x * z\n",
+    "```\n",
+    "</details>\n",
+    "\n",
+    "b) `55555`\n",
+    "\n",
+    "<details>\n",
+    "  <summary style = \"color:OrangeRed;cursor:pointer;\">&#10149; Give me the solution</summary>\n",
+    "  \n",
+    "```python\n",
+    "str(y) * y\n",
+    "```\n",
+    "</details>\n",
+    "\n",
+    "c) `5'54545454'`\n",
+    "\n",
+    "<details>\n",
+    "  <summary style = \"color:OrangeRed;cursor:pointer;\">&#10149; Give me the solution</summary>\n",
+    "  \n",
+    "```python\n",
+    "(str(y) + str(x)) * x\n",
+    "```\n",
+    "</details>\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x = 4\n",
+    "y = 5\n",
+    "z = 'hallo'\n",
+    "\n",
+    "# Your code here\n"
    ]
   },
   {
@@ -2468,5 +2670,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
