--- a/12_exercises.ipynb
+++ b/12_exercises.ipynb
@@ -142,16 +142,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "12.566370614359172"
+       "25.132741228718345"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -249,7 +249,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Correct code here\n"
+    "# Correct code here"
    ]
   },
   {
@@ -271,7 +271,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Correct code here\n"
+    "# Correct code here"
    ]
   },
   {
@@ -293,7 +293,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Correct code here\n"
+    "# Correct code here"
    ]
   },
   {
@@ -315,7 +315,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Correct code here\n"
+    "# Correct code here"
    ]
   },
   {
@@ -331,42 +331,21 @@
    "source": [
     "Given these variables:\n",
     "\n",
-    "x = 4\n",
-    "y = 5\n",
-    "z = 'hallo'\n",
+    "```python\n",
+    "x = 4  \n",
+    "y = 5  \n",
+    "z = 'hallo'  \n",
+    "```\n",
     "\n",
     "generate the requested outputs.\n",
     "\n",
     "a) `'hallohallohallohallo'`\n",
-    "<details>\n",
-    "  <summary style = \"color:OrangeRed;cursor:pointer;\">&#10149; Give me the solution</summary>\n",
-    "  \n",
-    "```python\n",
-    "x * z\n",
-    "```\n",
-    "</details>\n",
     "\n",
     "b) `55555`\n",
     "\n",
-    "<details>\n",
-    "  <summary style = \"color:OrangeRed;cursor:pointer;\">&#10149; Give me the solution</summary>\n",
-    "  \n",
-    "```python\n",
-    "str(y) * y\n",
-    "```\n",
-    "</details>\n",
-    "\n",
     "c) `5'54545454'`\n",
     "\n",
-    "<details>\n",
-    "  <summary style = \"color:OrangeRed;cursor:pointer;\">&#10149; Give me the solution</summary>\n",
-    "  \n",
-    "```python\n",
-    "(str(y) + str(x)) * x\n",
-    "```\n",
-    "</details>\n",
-    "\n",
-    "\n"
+    "<br>"
    ]
   },
   {
@@ -380,6 +359,22 @@
     "z = 'hallo'\n",
     "\n",
     "# Your code here\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<details>\n",
+    "  <summary style = \"color:OrangeRed;cursor:pointer;\">&#10149; Give me the solution</summary>\n",
+    "  \n",
+    "```python\n",
+    "print(x * z)\n",
+    "print(str(y) * y)\n",
+    "print((str(y) + str(x)) * x)\n",
+    "```\n",
+    "</details>\n",
+    "<br>"
    ]
   },
   {
@@ -928,10 +923,9 @@
     "additives = ('salt', 'vanilla', 'almond')\n",
     "```\n",
     "\n",
-    "investigate whether the given operations can be done, and how to do them.\n",
-    "\n",
+    "investigate whether the given operations can be done, and how to do them.  \n",
+    "<br>\n",
     "a) Add the additives to the ingredients\n",
-    "\n",
     "<details>\n",
     "  <summary style = \"color:OrangeRed;cursor:pointer;\">&#10149; Give me the solution</summary>\n",
     "  \n",
@@ -939,7 +933,7 @@
     "ingredients.extend(additives)\n",
     "```\n",
     "</details>\n",
-    "\n",
+    "<br>\n",
     "b) Replace sugar by saccharin\n",
     "\n",
     "<details>\n",
@@ -949,7 +943,7 @@
     "ingredients[0] = 'saccharin'\n",
     "```\n",
     "</details>\n",
-    "\n",
+    "<br>\n",
     "c) Add monosodium glutamate to the additives\n",
     "\n",
     "<details>\n",
@@ -959,7 +953,7 @@
     "Not possible\n",
     "```\n",
     "</details>\n",
-    "\n",
+    "<br>\n",
     "d) Make 'vanilla' uppercase\n",
     "\n",
     "<details>\n",
@@ -969,7 +963,7 @@
     "Not possible\n",
     "```\n",
     "</details>\n",
-    "\n",
+    "<br>\n",
     "e) Create this string.  \n",
     "`almond and vanilla and salt and flour and egg and butter and sugar`  \n",
     "This takes three separate operations.\n",
@@ -983,7 +977,7 @@
     "' and '.join(ingredients)\n",
     "```\n",
     "</details>\n",
-    "\n"
+    "<br>\n"
    ]
   },
   {
@@ -1067,11 +1061,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Tuples and lists\n",
+    "### Working with complex data structures\n",
     "\n",
-    "Tuples are supposed to be immutable. Let's explore the extend of this rule, and also some other behaviour of tuples and lists.\n",
+    "Tuples are supposed to be immutable. Let's explore the extend of this rule, and also some other behaviour of tuples, lists and dictionaries.\n",
     "\n",
-    "Given this tuple that is the top level collection of this datastructure:\n",
+    "Given this tuple that is the top level container of this data structure:\n",
     "\n",
     "```python\n",
     "ZP11 = ({'street': 'Zernikeplein',\n",
@@ -1155,7 +1149,8 @@
     "### sets\n",
     "\n",
     "\n",
-    "Create a set named \"fruits_a\" that has the values 'apple', 'pear' and 'banana'. Create a second set, \"fruits_b\", that holds the values 'banana', 'guava' and 'orange'. Find the union, intersection and difference (both ways) between these sets.\n",
+    "Create a set named `fruits_a` that has the values 'apple', 'pear' and 'banana'. Create a second set, `fruits_b`, that holds the values 'banana', 'guava' and 'orange'.  \n",
+    "Find the union, intersection and difference (both ways) between these sets.\n",
     "\n",
     "<details>\n",
     "  <summary style = \"color:OrangeRed;cursor:pointer;\">&#10149; Give me a hint!</summary>\n",
@@ -1206,8 +1201,8 @@
     "\n",
     "<details>\n",
     "  <summary style = \"color:OrangeRed;cursor:pointer;\">&#10149; Give me the complete solution!</summary>\n",
-    "  \n",
-    "<pre><code>\n",
+    "\n",
+    "```python  \n",
     "inventory = {513: 'hammer', 322: 'screwdriver', 462: 'nailgun'}\n",
     "print(inventory)\n",
     "\n",
@@ -1219,7 +1214,7 @@
     "\n",
     "inventory = dict([[513, 'hammer'], [322, 'screwdriver'], [462, 'nailgun']])\n",
     "print(inventory)\n",
-    "</code></pre>\n",
+    "```\n",
     "    \n",
     "This technique uses a list of 2-element-lists passed as argument to the `dict()` function..\n",
     "</details>\n"
@@ -1237,15 +1232,18 @@
    "metadata": {},
    "source": [
     "### if/else (1)\n",
-    "Using the `input()` function, ask the user their full name. Check the number of separate names. For instance, my full name is Michiel Andries Noback (don't tell anybody)! So the count is 3. If the count is higher than 3, ask the user whether they are catholic. If the answer is \"no\", you must conclude they are royalty. If the count is 2 or 3, conclude they are a commoner. With a count of 1, they must be a popstar!\n",
+    "Using the `input()` function, ask the user their height in meters.\n",
+    "If the given height is below 1.2 meters or above 2.5 meters, give the message \"are you sure you are not mistaken?\"\n",
+    "If the height is between 1.2 meters and 2.5 meters, don't give any warning.  \n",
+    "In both cases, give their height in inches (one inch is 2.54 centimetres). \n",
     "\n",
     "<details>\n",
     "  <summary style = \"color:OrangeRed;cursor:pointer;\">&#10149; Give me a hint!</summary>\n",
-    "  <pre><code>\n",
-    "name = input('Please give your full name: ')\n",
-    "if len(name.split(\" \")) > 3:\n",
-    "    pass\n",
-    "  </code></pre>\n",
+    "\n",
+    "```python\n",
+    "height = input('Please give your height in meters: ')\n",
+    "height = int(height)\n",
+    "```\n",
     "</details>"
    ]
   },
@@ -1254,19 +1252,38 @@
    "metadata": {},
    "source": [
     "### if/else (2)\n",
+    "Using the `input()` function, ask the user their full name. Check the number of separate names. For instance, my full name is Michiel Andries Noback (don't tell anybody)! So the count is 3. If the count is higher than 3, ask the user whether they are catholic. If the answer is \"no\", you must conclude they are royalty. If the count is 2 or 3, conclude they are a commoner. With a count of 1, they must be a popstar!\n",
+    "\n",
+    "<details>\n",
+    "  <summary style = \"color:OrangeRed;cursor:pointer;\">&#10149; Give me a hint!</summary>\n",
+    "  \n",
+    "```python  \n",
+    "name = input('Please give your full name: ')\n",
+    "if len(name.split(\" \")) > 3:\n",
+    "    pass\n",
+    "```\n",
+    "</details>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### if/else (3)\n",
     "Using the `input()` function, ask the user whether they like fish. Convert the input to lowercase so \"Yes\", \"yes\" and \"YES\" are all correct. Check the resulting answer (it should be yes or no, nothing else).  \n",
     "Next, ask the user whether they like meat. With these two inputs, give a pizza suggestion (e.g. vegetariana for people who said \"no\" to both questions). Look up a pizza menu from your favourite restaurant.  \n",
     "Feel free to adjust or expand to your liking!\n",
     "\n",
     "<details>\n",
     "  <summary style = \"color:OrangeRed;cursor:pointer;\">&#10149; Give me a hint!</summary>\n",
-    "  <pre><code>\n",
+    "\n",
+    "```python\n",
     "correct_answers = {'yes', 'no'}\n",
     "fish = input('do you like fish on your pizza [y/n]?')\n",
     "\n",
     "if not fish.lower() in correct_answers: #or if fish.lower() != 'yes' or fish.lower() != 'no':\n",
     "    fish = input('Only \"yes\" or \"no\" allowed! Do you like fish on your pizza [y/n]?')\n",
-    "  </code></pre>\n",
+    "```\n",
     "</details>"
    ]
   },
@@ -1275,6 +1292,39 @@
    "metadata": {},
    "source": [
     "### Looping with `for` (1)\n",
+    "\n",
+    "Using the `range()` function, the `for` loop and the format string (`f'text and {variable}'`) to create the output listed below. \n",
+    "\n",
+    "```\n",
+    "3 : 9 : 1.7320508075688772\n",
+    "6 : 36 : 2.449489742783178\n",
+    "9 : 81 : 3.0\n",
+    "12 : 144 : 3.4641016151377544\n",
+    "```\n",
+    "\n",
+    "<details>\n",
+    "  <summary style = \"color:OrangeRed;cursor:pointer;\">&#10149; Give me a hint</summary>\n",
+    "    \n",
+    "```python\n",
+    "for number in range(start, stop, step):\n",
+    "    pass\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# YOUR CODE"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Looping with `for` (2)\n",
     "\n",
     "From this list, `[3, 6, 8, 2, 7, 5, 1, 4]`, create a list holding tuples of each consecutive pair of numbers, like this: `[(3, 6), (8, 2), (7, 5), (1, 4)]`\n",
     "\n",
@@ -1337,7 +1387,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Looping with `for` (2)\n",
+    "### Looping with `for` (3)\n",
     "\n",
     "Given the text presented below, report \n",
     "1. the number of sentences\n",
@@ -1436,6 +1486,36 @@
    "metadata": {},
    "source": [
     "## Functions"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Speed to distance\n",
+    "\n",
+    "Write a function, `travelled_distance()` that accepts a speed (km/h) and an elapsed time (sec) and reports the travelled distance in meters, rounded to 2 decimals using the `round()` function, like this:\n",
+    "\n",
+    "```\n",
+    "With speed 10 km/h and elapsed time 25 sec, the travelled distance is 69.44 meters\n",
+    "```\n",
+    "  <br>\n",
+    "<details>\n",
+    "  <summary style = \"color:OrangeRed;cursor:pointer;\">&#10149; Give me a hint</summary>\n",
+    "\n",
+    "```python\n",
+    "speed_m_sec = (speed * 1000)/3600\n",
+    "```\n",
+    "</details>\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# YOUR CODE"
    ]
   },
   {
@@ -2649,7 +2729,7 @@
   "kernelspec": {
    "display_name": "education",
    "language": "python",
-   "name": "education"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -2662,11 +2742,6 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.9.16"
-  },
-  "vscode": {
-   "interpreter": {
-    "hash": "b0fa6594d8f4cbf19f97940f81e996739fb7646882a419484c72d19e05852a7e"
-   }
   }
  },
  "nbformat": 4,
