added argparse demo

--- a/13_challenges.ipynb
+++ b/13_challenges.ipynb
@@ -11,27 +11,176 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "All these challenges require you to use several to many of the learned concepts of this course. They are star-coded to indicate the difficulty level, ranging from one <strong>&#10034;</strong> to five <strong>&#10034;&#10034;&#10034;&#10034;&#10034;</strong>. Some challenges start out with one star, but represent more stars when finished completely.\n",
+    "## Introduction\n",
+    "**READ THIS CAREFULLY!**  \n",
+    "All the challenges in this chapter require you to use many of the learned concepts of this course. They are star-coded to indicate the difficulty level, ranging from one <strong>&#10034;</strong> to five <strong>&#10034;&#10034;&#10034;&#10034;&#10034;</strong>. Some challenges have one star in their minimal form, but represent more stars when finished completely. For most of these more difficult challenges you will need to learn to use new libraries, such as GUI toolkits.\n",
     "\n",
-    "You are encouraged to create real programs in dedicated scripts, with a main() method that is called from within this construct:\n",
+    "You have to create a real program, in a dedicated script, with a main() method that is called from within this construct:\n",
     "\n",
     "```python\n",
     "if __name__ == \"__main__\":\n",
     "   #Start application here\n",
     "```\n",
     "\n",
-    "Write functions that are small, well-documented, and serve only a single well-defined purpose. To become a real-world programmer you could and should also start making use of the `argparse` module to process command-line arguments. When grading your work, these aspects are all taken into account:\n",
+    "To become a real-world programmer you could and should also start making use of the `argparse` module to process command-line arguments. When grading your work, these aspects are all taken into account:\n",
     "\n",
-    "1. Code quality (names, [pep-8](https://peps.python.org/pep-0008/), building with functions)\n",
+    "1. Code quality (names, [pep-8](https://peps.python.org/pep-0008/)\n",
+    "1. There is a minimal amount of top-level code (global variables, code outside functions)\n",
+    "1. Almost all code resides within small functions. These are well-documented and serve only a single well-defined purpose. \n",
     "1. Code efficiency (using right language constructs)\n",
     "1. Use of correct build-in functions and libraries\n",
     "1. Complexity of the implemented challenge\n",
-    "1. Use of the `argparse` module. See [here](https://docs.python.org/3/howto/argparse.html) for a tutorial.\n",
+    "1. Use of the `argparse` module. See [here](https://docs.python.org/3/howto/argparse.html) for the official docs, and below for a small demonstration program.\n",
     "\n",
     "Note that the first challenges are generic; they are not related to (molecular) biology or bio-informatics and thus may be easier to start out with.  \n",
     "\n",
-    "Besides the challenges listed below, you are encouraged to think of one yourself. Alternatively, you can look at [https://rosalind.info](https://rosalind.info/problems/list-view/), a nice site offering many challenges related to bioinformatics. Check with the lecturer when you have chosen one if whether it is appropriate as final challenge.\n",
-    "\n"
+    "Besides the challenges listed below, you are encouraged to think of one yourself. Alternatively, you can look at [https://rosalind.info](https://rosalind.info/problems/list-view/), a nice site offering many challenges related to bioinformatics. Check with the lecturer when you have chosen one if whether it is appropriate as final challenge."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### The `argparse` module\n",
+    "The `argparse` module can be used to process command-line (terminal) commands in a standards-compliant manner.\n",
+    "Almost all programs need external input to work correctly, either as data source or program arguments that modify the way the program operates.  \n",
+    "For instance, suppose you have a program, `my_app.py`, that needs to know the username of the user, and some textual input that can come either from the commandline directly, or from a file.  \n",
+    "Below is a listing of some examples of how a typical run of this program could look like (I have omitted the python interpreter command tha comes first).  \n",
+    "\n",
+    "```\n",
+    "my_app.py --help                            # shows help on usage\n",
+    "my_app.py -h                                # same, short form\n",
+    "my_app.py  -n Mike -t \"This is the input\"   # gives username and terminal input\n",
+    "my_app.py  -n Mike --file data.txt          # gives username and file input (long form)\n",
+    "my_app.py  -n Mike -f data.txt -v           # gives username and file input and runs verbose\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "When using the `argparse` module, this is quite easy to implement. It requires two pieces of code: the code defining the possible arguments, and a piece of code processing the actual input (from the `sys.argv` list).\n",
+    "\n",
+    "Here is the definition of possible inputs, all put in a single function:\n",
+    "\n",
+    "```python\n",
+    "import argparse\n",
+    "\n",
+    "def create_argparser():\n",
+    "    parser = argparse.ArgumentParser(\n",
+    "                    prog = 'my_app.py',\n",
+    "                    description = 'This program demonstrates the usage of the argparse module.',\n",
+    "                    epilog = 'If you read this: great - you are a thorough person!')\n",
+    "    # required option that takes a value\n",
+    "    parser.add_argument('-n', '--name', required = True, help = 'The name of the player')\n",
+    "    # optional option that takes a value  \n",
+    "    parser.add_argument('-t', '--text', required = False, help = 'The text to be processed')  \n",
+    "    # optional option that takes a value (required = False is the default)\n",
+    "    parser.add_argument('-f', '--file', help = 'The file to be processed') \n",
+    "    # optional on/off flag that will default to false\n",
+    "    parser.add_argument('-v', '--verbose', action='store_true',\n",
+    "                        help = 'The to have more informative messages during program run')  \n",
+    "    return parser\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Below is the processing of the options defined above. The set options can simply be accessed using the dot operator and the long name of the option: `args.option`. If they are absent, the test `if args.option` will fail because its value is `None`.\n",
+    "\n",
+    "```python\n",
+    "def process_commandline(parser):\n",
+    "    args = parser.parse_args()\n",
+    "    print(f'Welcome, {args.name}')\n",
+    "    if args.verbose:  # Flag is a bool!\n",
+    "        print('Running in verbose mode.')\n",
+    "    \n",
+    "    if args.text: ## Checking whether test has been passed\n",
+    "        print(f'Reading text from CL: {args.text}')\n",
+    "    elif args.file: ## ..if not, look for a file\n",
+    "        print(f'Reading from {args.file}')\n",
+    "    else: ## if both are absent, I cannot proceed\n",
+    "        print('No input')\n",
+    "    return args\n",
+    "```\n",
+    "\n",
+    "Note that `-h` and `--help` need not be defined - they are implemented by the `argparse` module itself!"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The `main` block linking these two looks like this:\n",
+    "\n",
+    "```python\n",
+    "if __name__ == '__main__':\n",
+    "    parser = create_argparser()\n",
+    "    program_args = process_commandline(parser)\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Below follow some actual runs, and the output that results from the given command.  \n",
+    "\n",
+    "```\n",
+    "~$ myapp.py\n",
+    "\n",
+    "usage: my_app.py [-h] -n NAME [-t TEXT] [-f FILE] [-v]\n",
+    "my_app.py: error: the following arguments are required: -n/--name\n",
+    "```\n",
+    "\n",
+    "```\n",
+    "~$ myapp.py --help\n",
+    "\n",
+    "usage: my_app.py [-h] -n NAME [-t TEXT] [-f FILE] [-v]\n",
+    "\n",
+    "This program demonstrates the usage of the argparse module.\n",
+    "\n",
+    "optional arguments:\n",
+    "  -h, --help            show this help message and exit\n",
+    "  -n NAME, --name NAME  The name of the player\n",
+    "  -t TEXT, --text TEXT  The text to be processed\n",
+    "  -f FILE, --file FILE  The file to be processed\n",
+    "  -v, --verbose         The to have more informative messages during program run\n",
+    "\n",
+    "If you read this: great - you are a thorough person!\n",
+    "```\n",
+    "\n",
+    "```\n",
+    "~$ myapp.py -n Mike\n",
+    "\n",
+    "Welcome, Mike\n",
+    "No input\n",
+    "```\n",
+    "\n",
+    "```\n",
+    "~$ myapp.py -n Mike -t \"datadatadata\" -v\n",
+    "\n",
+    "Welcome, Mike\n",
+    "Running in verbose mode.\n",
+    "Reading text from CL: datadatadata\n",
+    "```\n",
+    "\n",
+    "```\n",
+    "~$ myapp.py -n Mike --file data.txt\n",
+    "\n",
+    "Welcome, Mike\n",
+    "Reading from data.txt\n",
+    "```\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Note that this only skims the surface: this example only deals with optional arguments, not positional ones. If you want to be more flexible I suggest you read the docs!"
    ]
   },
   {
